fixed padding around images, first and last cell should animate properly with no cutoffs

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ blockquote:before, blockquote:after, q:before, q:after {
     width: 90vw;
     height: 90vh;
     position: relative;
+    padding: 2%;
     gap: 2%;
 }
 
